[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "peer-protocol"
version = "0.0.5"
description = "既能做客户端也能做服务端"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "aiohttp>=3.9",
]

[project.urls]
Repository = "https://github.com/XiaoHui2023/peer-protocol"

[tool.hatch.build.targets.wheel]
packages = ["peer_protocol"]
